--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "cmdk": "1.0.0",
     "lucide-react": "^0.474.0",
     "next": "15.1.0",
+    "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
+    "sonner": "^1.7.4",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2"
